search page done.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -396,16 +396,115 @@
                 </div>
                 <div class="search-result-card-contacts-container">
                     <ul class="search-card-contacts-list">
-                        <li class="search-card-contact "> 974-44479411 <span class="icon-Icon-telephone contact-icon "></span>+</li>
+                        <li class="search-card-contact ">974-44479411<span class="icon-Icon-telephone contact-icon "></span>+</li>
                         <li class="search-card-contact">info@qpmc.qa <span class="icon-Icon-email contact-icon "></span></li>
-                        <li class="search-card-contact">+974-44479422<span class="icon-Icon-print contact-icon "></span>+</li>
+                        <li class="search-card-contact">974-44479422<span class="icon-Icon-print contact-icon "></span>+</li>
                         <li class="search-card-contact">www.qpmc.qa<span class="icon-Icon-globe contact-icon "></span></li>
     
                         
                     </ul>
                 </div>
+                <div class="search-reult-card-actions-container">
+                    <ul class="search-result-card-actions-list">
+                        <li class="search-result-card-action">
+                            <button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">
+                                مشاركه 
+                            <!-- <span class="icon-Icon-share  "></span> -->
+                            </button>
+                        </li>
+                        <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
+                    </ul>
+                </div>
             </div>
 
+        </div>
+
+        <div class="search-result-card search-result-card--sm">
+            <div class="search-result-card-image-container shadow">
+                <img class="search-result-card__img" src="../assets/images/c1.jpg" alt="card-img">
+            </div>
+            <div class="search-result-card-info">
+                <div class="search-result-card-header-container">
+                    <h3 class="search-result-card__header">شركة قطر للمواد الاولية</h3>
+                </div>
+                <div class="search-result-card-details-container">
+                    <p class="search-result-card-details__txt">
+                        تأسست شركة قطر للمواد الأولية بناء على تعليمات من الحكومة القطرية في العام 2006 من أجل ضمان إمدادات مواد البناء في السوق المحلية تمتلك الشركة و تشغّل احتياطيات استراتيجية من المواد الأولية داخل دولة قطر، كما توفر حلولا متكاملة في مجالات عدة منها : إدارة الموانئ , العمليات اللوجستية و الإمداد , التخزين و توزيع المواد الأولية الرئيسية لتلبية 
+                       
+                    </p>
+                </div>
+                <div class="search-result-card-contacts-container">
+                    <ul class="search-card-contacts-list">
+                        <li class="search-card-contact ">974-44479411<span class="icon-Icon-telephone contact-icon "></span>+</li>
+                        <li class="search-card-contact">info@qpmc.qa <span class="icon-Icon-email contact-icon "></span></li>
+                        <li class="search-card-contact">974-44479422<span class="icon-Icon-print contact-icon "></span>+</li>
+                        <li class="search-card-contact">www.qpmc.qa<span class="icon-Icon-globe contact-icon "></span></li>
+    
+                        
+                    </ul>
+                </div>
+                <div class="search-reult-card-actions-container">
+                    <ul class="search-result-card-actions-list">
+                        <li class="search-result-card-action">
+                            <button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">
+                                مشاركه 
+                            <!-- <span class="icon-Icon-share  "></span> -->
+                            </button>
+                        </li>
+                        <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="search-result-card search-result-card--sm">
+            <div class="search-result-card-image-container shadow">
+                <img class="search-result-card__img" src="../assets/images/c1.jpg" alt="card-img">
+            </div>
+            <div class="search-result-card-info">
+                <div class="search-result-card-header-container">
+                    <h3 class="search-result-card__header">شركة قطر للمواد الاولية</h3>
+                </div>
+                <div class="search-result-card-details-container">
+                    <p class="search-result-card-details__txt">
+                        تأسست شركة قطر للمواد الأولية بناء على تعليمات من الحكومة القطرية في العام 2006 من أجل ضمان إمدادات مواد البناء في السوق المحلية تمتلك الشركة و تشغّل احتياطيات استراتيجية من المواد الأولية داخل دولة قطر، كما توفر حلولا متكاملة في مجالات عدة منها : إدارة الموانئ , العمليات اللوجستية و الإمداد , التخزين و توزيع المواد الأولية الرئيسية لتلبية 
+                       
+                    </p>
+                </div>
+                <div class="search-result-card-contacts-container">
+                    <ul class="search-card-contacts-list">
+                        <li class="search-card-contact ">974-44479411<span class="icon-Icon-telephone contact-icon "></span>+</li>
+                        <li class="search-card-contact">info@qpmc.qa <span class="icon-Icon-email contact-icon "></span></li>
+                        <li class="search-card-contact">974-44479422<span class="icon-Icon-print contact-icon "></span>+</li>
+                        <li class="search-card-contact">www.qpmc.qa<span class="icon-Icon-globe contact-icon "></span></li>
+    
+                        
+                    </ul>
+                </div>
+                <div class="search-reult-card-actions-container">
+                    <ul class="search-result-card-actions-list">
+                        <li class="search-result-card-action">
+                            <button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">
+                                مشاركه 
+                            <!-- <span class="icon-Icon-share  "></span> -->
+                            </button>
+                        </li>
+                        <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="pagination-container">
+            <ul class="pagination-list">
+                <li class="last-page"><a class="page-numer__txt" href="#"><span class="icon-Icon-long-arrow"></span></a></li>
+                <li class="page-number  "><a class="page-numer__txt " href="#">3</a></li>
+                <li class="page-number"><a class="page-numer__txt" href="#">2</a></li>
+                <li class="page-number active"><a class="page-numer__txt" href="#">1</a></li>
+
+            </ul>
         </div>
     </div>
 
