--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -13,3 +13,6 @@ $shadow-grey:#D1D1D1;
 $light-grey-bg:#ECF0F1;
 $dark-grey-txt:#656565;
 $light-red:#FF0000;
+$shadow-light-grey-bg:#DCDCDC;
+$med-grey-txt:#808080;
+$light-green:#3CCF5E;
