--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
  @import 'components/input-form';
  @import 'components/accordion-search';
  @import 'components/info-card';
+ @import 'components/pagination';
 /*Import pages*/
 @import'pages/home.scss';
 @import 'pages/about-portal.scss';
