--- a/src/sass/pages/factories-sectors.scss
+++ b/src/sass/pages/factories-sectors.scss
@@ -1,6 +1,7 @@
 .factories-sectors{
     display: flex;
     justify-content: space-between;
+    padding-#{$default-float}: 7.188rem;
 }
 
 .side-menue-filter{
