--- a/src/sass/icons/style.scss
+++ b/src/sass/icons/style.scss
@@ -1,12 +1,12 @@
 @import "variables";
-$base-url:'src/sass/icons/';
+
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$base-url}/#{$icomoon-font-path}/#{$icomoon-font-family}.eot?kp53a7');
-  src:  url('#{$base-url}/#{$icomoon-font-path}/#{$icomoon-font-family}.eot?kp53a7#iefix') format('embedded-opentype'),
-    url('#{$base-url}/#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?kp53a7') format('truetype'),
-    url('#{$base-url}/#{$icomoon-font-path}/#{$icomoon-font-family}.woff?kp53a7') format('woff'),
-    url('#{$base-url}/#{$icomoon-font-path}/#{$icomoon-font-family}.svg?kp53a7##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?e38jht');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?e38jht#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?e38jht') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?e38jht') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?e38jht##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -158,6 +158,4 @@ $base-url:'src/sass/icons/';
     color: #7f7f7f;
   }
 }
-
-
 
