details first card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -322,9 +322,9 @@
 </section> -->
 
 <!---------------------------------------------fifth Page Factories sectors------------------>
-<section class="factories-sectors">
+<!-- <section class="factories-sectors"> -->
     <!--filter side-->
-    <aside class="side-menue-filter">
+    <!-- <aside class="side-menue-filter">
         <div class="input-form-search">
             <input type="text" class="input-form-search__txt big-font-placeholder"  placeholder="الشركة">
             <span class="icon-Icon-Search "></span>
@@ -409,7 +409,7 @@
                         <li class="search-result-card-action">
                             <button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">
                                 مشاركه 
-                            <!-- <span class="icon-Icon-share  "></span> -->
+                          
                             </button>
                         </li>
                         <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
@@ -448,7 +448,6 @@
                         <li class="search-result-card-action">
                             <button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">
                                 مشاركه 
-                            <!-- <span class="icon-Icon-share  "></span> -->
                             </button>
                         </li>
                         <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
@@ -487,7 +486,6 @@
                         <li class="search-result-card-action">
                             <button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">
                                 مشاركه 
-                            <!-- <span class="icon-Icon-share  "></span> -->
                             </button>
                         </li>
                         <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
@@ -528,10 +526,86 @@
     </aside>
 
 
+</section> -->
+
+
+<!-----------------------------------------sixth page Factory Details sector------------------------>
+<section class="factory-details">
+    <div class="container">
+    <div class="row">
+        <div class="col">
+          <div class="search-result-card search-result-card--md">
+            <div class="search-result-card-image-container shadow">
+                <img class="search-result-card__img" src="../assets/images/c1.jpg" alt="card-img">
+            </div>
+            <div class="search-result-card-info">
+                <div class="search-result-card-header-container">
+                    <h3 class="search-result-card__header">معماري قطر</h3>
+                </div>
+                <div class="search-result-card-details-container">
+                    <p class="search-result-card-details__txt">
+                        أسست معماري قطر يو بي في سي في عام ٢٠٠٧ في قطر لتكون من الشركات الرائدة في مجال صناعة النوافذ والابواب العازلة حيث تم انشاء اول مصنع في قطر يعمل بتكنولوجي ال سي ان سي والتي تقلص تدخل العنصر البشري في عملية التصنيع
+                    </p>
+                </div>
+                <div class="search-result-card-contacts-container">
+                    <ul class="search-card-contacts-list">
+                        <li class="search-card-contact ">974-44479411<span class="icon-Icon-telephone contact-icon "></span>+</li>
+                        <li class="search-card-contact">info@qpmc.qa <span class="icon-Icon-email contact-icon "></span></li>
+                        <li class="search-card-contact">974-44479422<span class="icon-Icon-print contact-icon "></span>+</li>
+                        <li class="search-card-contact">www.qpmc.qa<span class="icon-Icon-globe contact-icon "></span></li>
+    
+                        
+                    </ul>
+                </div>
+                <div class="address-container">
+                    <span class="address-header">العنوان :</span>
+                    <span class="address-details">  بالقرب من دوار ميد ماك ، الدوحة ، قطر</span>
+                </div>
+                <div class="social-container">
+                    <span class="address-header">مواقع التواصل</span>
+                    <span class="social-icons-details"> 
+                        <ul class="social-icon-list">
+                            <li class="social-icon"><a href="#" class="social-action"><span class="icon-Icon-linkedin "></span></a></li>
+                            <li class="social-icon"><a href="#" class="social-action"><span class="icon-Icon-Gmail"></span></a></li>
+                            <li class="social-icon"><a href="#" class="social-action"><span class="icon-Icon-facebook"></span></a></li>
+                            <li class="social-icon"><a href="#" class="social-action"><span class="icon-Icon-youtube"></span></a></li>
+                            <li class="social-icon"><a href="#" class="social-action"><span class="icon-Icon-twitter"></span></a></li>
+                            <li class="social-icon"><a href="#" class="social-action"><span class="icon-Icon-instagram"></span></a></li>
+                            <li class="social-icon"><a href="#" class="social-action"><span class="Icon-snapchat"></span></a></li>
+
+
+
+
+                        </ul>
+                    </span>
+                </div>
+                <!-- <div class="search-reult-card-actions-container">
+                    <ul class="search-result-card-actions-list">
+                        <li class="search-result-card-action">
+                            <button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">
+                                مشاركه 
+                            </button>
+                        </li>
+                        <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
+                    </ul>
+                </div> -->
+            </div>
+          </div> 
+          
+          <div class="factory-details-container">
+              <div class="personal-details-container">
+                  <div class="person-details-box">
+
+                  </div>
+                  <div class="branches">
+                      
+                  </div>
+              </div>
+          </div>
+        </div>  
+    </div>     
+    </div>
 </section>
-
-
-
 
 <!--Footer-->
 <footer>
