pre-contact-card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -594,11 +594,61 @@
           
           <div class="factory-details-container">
               <div class="personal-details-container">
-                  <div class="person-details-box">
 
+                  <div class="person-details-box">
+                      <div class="person-contact-header-container">
+                          <h3 class="person__contact-header"> التواصل التجارى</h3>
+                      </div>
+                    <div class="person-image-container">
+                        <img class="person__img" src="../assets/images/c1.jpg" alt="person">
+                    </div>
+                    <div class="person-name-container">
+                        <h4 class="person__name">السيد/ أسامة جمال</h4>
+                    </div>
+                    <div class="person-title-container">
+                        <h5 class="person__title">المدير العام - التسويق والمبيعات</h5>
+                    </div>
+
+                    <div class="person-contacts-container">
+                        <h5 class="person__contact"><span class="icon-Icon-phone-alt person-contacts__icon"></span>+974-55802697</h5>
+                        <h5 class="person__contact"><span class="icon-Icon-email person-contacts__icon"></span>o.jamal@dohacables.com</h5>
+
+                    </div>
+                    
                   </div>
-                  <div class="branches">
-                      
+
+
+
+                  <div class="branches-box">
+                    <div class="branch-txt-container">
+                        <h3 class="branche__txt"> الفروع</h3>
+                    </div>
+                    <div class="branches-info-container">
+
+                        <div class="branch-info">
+                            <div class="branch-name-container">
+                                <h3 class="branch__name">مصنع الدوحة للكابلات</h3>
+                            </div>
+                            <div class="branch-address-container">
+                                <h4 class="branch__address">مجمع ام اى سى</h4>
+                            </div>
+                            <div class="branch-contact-number-container">
+                                <h4 class="branch__number"><span class="icon-Icon-phone-alt"></span> +974-40339503</h4>
+                            </div>
+                        </div>
+                        
+                        <div class="branch-info">
+                            <div class="branch-name-container">
+                                <h3 class="branch__name">مصنع الدوحة للكابلات</h3>
+                            </div>
+                            <div class="branch-address-container">
+                                <h4 class="branch__address">مجمع ام اى سى</h4>
+                            </div>
+                            <div class="branch-contact-number-container">
+                                <h4 class="branch__number"><span class="icon-Icon-phone-alt"></span> +974-40339503</h4>
+                            </div>
+                        </div>
+                    </div>
                   </div>
               </div>
           </div>
