--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,10 +13,12 @@
  @import 'components/accordion-search';
  @import 'components/info-card';
  @import 'components/pagination';
+ @import 'components/personal-info-card';
 /*Import pages*/
 @import'pages/home.scss';
 @import 'pages/about-portal.scss';
 @import 'pages/factories-sectors.scss';
+@import 'pages/factory-details.scss';
 
 /*Import Layouts*/
  @import 'layout/nav';
