pre category slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -621,11 +621,11 @@
 
                   <div class="branches-box">
                     <div class="branch-txt-container">
-                        <h3 class="branche__txt"> الفروع</h3>
+                        <h3 class="branch__txt"> الفروع</h3>
                     </div>
-                    <div class="branches-info-container">
+                    <ul class="branches-info-container">
 
-                        <div class="branch-info">
+                        <li class="branch-info">
                             <div class="branch-name-container">
                                 <h3 class="branch__name">مصنع الدوحة للكابلات</h3>
                             </div>
@@ -635,9 +635,9 @@
                             <div class="branch-contact-number-container">
                                 <h4 class="branch__number"><span class="icon-Icon-phone-alt"></span> +974-40339503</h4>
                             </div>
-                        </div>
+                        </li>
                         
-                        <div class="branch-info">
+                        <li class="branch-info">
                             <div class="branch-name-container">
                                 <h3 class="branch__name">مصنع الدوحة للكابلات</h3>
                             </div>
@@ -647,9 +647,16 @@
                             <div class="branch-contact-number-container">
                                 <h4 class="branch__number"><span class="icon-Icon-phone-alt"></span> +974-40339503</h4>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                   </div>
+              </div>
+
+              <div class="products-catalog-container">
+                  <div class="product-catalog-header-container">
+                      <h3 class="product-catalog-header__txt">كتالوج المنتجات</h3>
+                    </div>
+                    <catalog-slider></catalog-slider>
               </div>
           </div>
         </div>  
