--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
  @import 'components/info-card';
  @import 'components/pagination';
  @import 'components/personal-info-card';
+ @import 'components/catalog-card';
 /*Import pages*/
 @import'pages/home.scss';
 @import 'pages/about-portal.scss';
