--- a/src/app/catalog-slider/catalog-slider.component.html
+++ b/src/app/catalog-slider/catalog-slider.component.html
@@ -3,33 +3,40 @@
       <ul class="swiper-wrapper Ca-slide_list">
         <li class="swiper-slide Ca-slide_item" data-swiper-autoplay="1500" data-swiper-slide-index="0">
           <!--data-swiper-autoplay -->
-          <div class="Ca-slide-item-image-container">
-           <img src=".././../assets/images/footer-slider-ph.png" class="Ca-slide_img" alt="">
+          <div class="Ca-slide-item-image-container shadow">
+           <img src=".././../assets/images/c1.jpg" class="Ca-slide_img" alt="">
           </div>
         </li>
        
         <li class="swiper-slide Ca-slide_item" data-swiper-autoplay="1500" data-swiper-slide-index="1">
-          <div class="Ca-slide-item-image-container">
-            <img src=".././../assets/images/footer-slider-ph.png" class="Ca-slide_img" alt="">
+          <div class="Ca-slide-item-image-container shadow">
+            <img src=".././../assets/images/c2.jpg" class="Ca-slide_img" alt="">
         </div>
         </li>
         
         <li class="Ca-slide_item swiper-slide swiper-slide-prev" data-swiper-autoplay="1500" data-swiper-slide-index="2">
-        <div class="Ca-slide-item-image-container">
-            <img src=".././../assets/images/footer-slider-ph.png" class="Ca-slide_img" alt="">
+        <div class="Ca-slide-item-image-container shadow">
+            <img src=".././../assets/images/c3.jpg" class="Ca-slide_img" alt="">
         </div>
         </li>
         <li class="Ca-slide_item swiper-slide swiper-slide-active" data-swiper-autoplay="1500" data-swiper-slide-index="3">
-            <div class="Ca-slide-item-image-container">
-                <img src=".././../assets/images/footer-slider-ph.png" class="Ca-slide_img" alt="">
+            <div class="Ca-slide-item-image-container shadow">
+                <img src=".././../assets/images/c1.jpg" class="Ca-slide_img" alt="">
             </div>
         </li>
         <li class="Ca-slide_item swiper-slide swiper-slide-next" data-swiper-autoplay="1500" data-swiper-slide-index="4">
-            <div class="Ca-slide-item-image-container">
-                <img src=".././../assets/images/footer-slider-ph.png" class="Ca-slide_img" alt="">
+            <div class="Ca-slide-item-image-container shadow">
+                <img src=".././../assets/images/c2.jpg" class="Ca-slide_img" alt="">
             </div>
         </li>
      
       </ul>
+    </div>
+    <div class="swiper-btns-wrapperr">
+        <div class="Ca-swiper-button-next swiper-button-next swiper-button-white "></div>
+        <div class="Ca-swiper-button-prev swiper-button-prev swiper-button-white"></div>
+    </div>
+    <div class="swiper-pagination-container">
+        <div class="swiper-pagination"></div>
     </div>
   </section>
