--- a/src/app/catalog-slider/catalog-slider.component.scss
+++ b/src/app/catalog-slider/catalog-slider.component.scss
@@ -1,12 +1,18 @@
 
 .Ca-slide-block {
     background-color: transparent;
-    height:19rem;
+    height:20rem;
     overflow: hidden;
   }
+  .catalog-swiper-container{
+      height:100%;
+      position: relative;
+  }
   .Ca-slide_item {
-    padding: 90px 0;
-  
+   // padding: 90px 0;
+    width:15.313rem; ;
+    height:19rem ;
+
     -webkit-transition: transform 0.5s;
     -moz-transition: transform 0.5s;
     -ms-transition: transform 0.5s;
@@ -14,15 +20,18 @@
     transition: transform 0.5s;
   }
   .Ca-slide-item-image-container{
-      height:100% ;
-      width: 15.313rem;
+      height:16.961rem ;
+    //   width: 15.313rem;
+     border-radius: .5rem;
+     overflow: hidden;
+      margin-top: 1rem;
   }
   .Ca-slide_img {
     display: block;
     width: 100%;
     max-width: 317px;
     margin: 0 auto;
-  
+    height: 100%;
     opacity: 0.5;
   
     -webkit-box-shadow: 0 20px 172px 0 rgba(0, 0, 0, 0.05);
@@ -36,96 +45,18 @@
     -o-transition: ease 0.5s;
     transition: ease 0.5s;
   }
-  .Ca-slide_info {
-    width: 100%;
-    margin: 0 auto;
-    padding: 10px 8px 5px;
-    background-color: #FFF;
   
-    opacity: 0.5;
-  
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  
-    -webkit-transition: ease 0.5s;
-    -moz-transition: ease 0.5s;
-    -ms-transition: ease 0.5s;
-    -o-transition: ease 0.5s;
-    transition: ease 0.5s;
-  }
-  .Ca-slide-info_descr {
-    float: left;
-  }
-  .Ca-slide-info_category {
-    font-size: 8px;
-    display: block;
-    color: #959494;
-    padding-bottom: 5px;
-  }
-  .Ca-slide-info_title {
-    line-height: 10px;
-    width: 150px;
-    padding-bottom: 5px;
-  
-    font-weight: 800;
-    font-size: 10px;
-    color: #262626;
-  
-    will-change: transform;
-  }
-  .Ca-slide-info_route {
-    display: block;
-    line-height: 10px;
-  
-    font-size: 8px;
-    color: #959494;
-  }
-  .Ca-slide-info_img {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-  
-    -webkit-transform: translateY(25%);
-    -moz-transform: translateY(25%);
-    -ms-transform: translateY(25%);
-    -o-transform: translateY(25%);
-    transform: translateY(25%);
-  }
-  .Ca-slide-info_rate {
-    float: right;
-    height: 40px;
-    width: 40px;
-    border: 1px solid #e4d7d9;
-  
-    text-align: center;
-  
-    will-change: transform;
-  
-    -webkit-border-radius: 3px 3px 3px 3px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -ms-border-radius: 3px 3px 3px 3px;
-    -o-border-radius: 3px 3px 3px 3px;
-    border-radius: 3px 3px 3px 3px;
-  }
-  .Ca-slide-info_strong {
-    display: block;
-  
-    font-weight: normal;
-    color: #fc3b62;
-  }
-  .Ca-slide-info_comments {
-    letter-spacing: -0.01em;
-    font-size: 6px;
-  }
-  
+  .Ca-slide_list.swiper-wrapper{
+    margin-bottom: 0;
+    margin-right: -2rem;
+}
+
   
   .Ca-slide-block .swiper-container {
     padding-top: 13px;
   }
   .Ca-slide-block .swiper-slide {
-    padding-left: 15px;
-    padding-right: 15px;
+
     padding-top: 0px;
     padding-bottom: 0;
     z-index: 1;
@@ -138,9 +69,9 @@
   }
   .Ca-slide-block .swiper-slide-active {
     opacity: 1;
-  
+    height:19rem;
     z-index: 2;
-  
+    margin-right: -1.5rem;
     will-change: transform;
   
     -webkit-transform: scale(1.001);
@@ -154,6 +85,13 @@
     -ms-transition: transform 0.5s;
     -o-transition: transform 0.5s;
     transition: transform 0.5s;
+
+    .Ca-slide-item-image-container{
+        height: 100%;
+        margin-top: 0;
+        width: 15.313rem;
+      
+    }
   }
   .Ca-slide-block .swiper-slide-active .Ca-slide_img {
     opacity: 1;
@@ -175,12 +113,30 @@
     -o-transition: ease 0.5s;
     transition: ease 0.5s;
   }
-  
-  @media (max-width: 1220px) {
-    .Ca-slide-info_title {
-      width: 130px;
-    }
+  .swiper-btns-wrapperr{
+    position: absolute;
+    left: 0;
+    top: -9%;
   }
+
+  .Ca-swiper-button-next{
+    margin-left: 43.5rem;
+  }
+  .Ca-swiper-button-next,.Ca-swiper-button-prev{
+      background-color: black;
+      border-radius: 50%;
+      padding: 1rem;
+      &:after{
+        color: white;
+        font-size: 1rem;
+      }
+  }
+
+//   @media (max-width: 1220px) {
+//     .Ca-slide-info_title {
+//       width: 130px;
+//     }
+//   }
   li{
       list-style: none;
   }
