--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,19 @@
       <img class="logo-img" src="../assets/images/Logo.png" alt="logo">
   </div>
 <ul class="nav-tabs-container">
-    <li class="nav-tab active"><a href="#"> الصفحةالرئيسية</a></li>
-    <li class="nav-tab "><a href="#">عن البوابة</a> </li>
-    <li class="nav-tab "><a href="#">الاقسام الصناعية</a><span class="icon-Icon-arrow rotate-down white-colored-txt drop-down-arrow"></span></li>
-    <li class="nav-tab "><a href="#">الرعاة المشاركون</a></li>
-    <li class="nav-tab "><a href="#">اضف مصنعك</a></li>
-    <li class="nav-tab "><a href="#">اتصل بنا</a></li>
+    <li class="nav-tab " routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/"> الصفحةالرئيسية</a></li>
+    <li class="nav-tab " routerLinkActive="active"><a routerLink="/About">عن البوابة</a> </li>
+    <li class="nav-tab " routerLinkActive="active"><a routerLink="/Factories">الاقسام الصناعية</a>
+        <!-- <span class="icon-Icon-arrow rotate-down white-colored-txt drop-down-arrow"></span> -->
+    </li>
+    <li class="nav-tab " routerLinkActive="active"><a routerLink="/FactoryDetails">الرعاة المشاركون</a></li>
+    <li class="nav-tab " routerLinkActive="active"><a routerLink="/AddFactory">اضف مصنعك</a></li>
+    <li class="nav-tab " routerLinkActive="active"><a routerLink="/ContactUs">اتصل بنا</a></li>
 </ul>
 <button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher">English</button>
 </div>
 </nav>
-
+<router-outlet></router-outlet>
 <!------------------------------------Home Page --------------------------------------->
 <!--slider-->
 <!-- <slides-carousel></slides-carousel> -->
@@ -113,14 +115,14 @@
 
 
 <!---------------------------------------------- Pages Shared Bannrr Details----------------------->
-<div class="page-banner">
+<!-- <div class="page-banner">
     <div class="page-banner-container">
         <div class="page-banner-content-container">
             <img class="page-banner__image" src="../assets/images/c1.jpg">
             <h2 class="page-banner__header">عن البوابة</h2>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-----------------------------------------------Secound Page Details------------------------->
 
@@ -530,7 +532,7 @@
 
 
 <!-----------------------------------------sixth page Factory Details sector------------------------>
-<section class="factory-details">
+<!-- <section class="factory-details">
     <div class="container">
     <div class="row">
         <div class="col">
@@ -578,7 +580,8 @@
 
                         </ul>
                     </span>
-                </div>
+                </div> -->
+
                 <!-- <div class="search-reult-card-actions-container">
                     <ul class="search-result-card-actions-list">
                         <li class="search-result-card-action">
@@ -589,7 +592,7 @@
                         <li class="search-result-card-action"><button class="action-btn btn--trasnparent btn-txt--black btn--lit-rounded ">المزيد</button></li>
                     </ul>
                 </div> -->
-            </div>
+            <!-- </div>
           </div> 
           
           <div class="factory-details-container">
@@ -691,10 +694,10 @@
         </div>  
     </div>     
     </div>
-</section>
+</section> -->
 
 <!--Footer-->
-<footer>
+<!-- <footer> -->
     <!--slider-->
     <!-- <div class="slider">
         <div class="slide-track">
@@ -742,16 +745,16 @@
             </div>
         </div>
     </div> -->
-    <footer-slider></footer-slider>
+    <!-- <footer-slider></footer-slider> -->
     <!--fixed backgroud-->
-    <div class="footer--bg"></div>
+    <!-- <div class="footer--bg"></div> -->
    <!--footer logo-->
-   <hr class="custom-line">
+   <!-- <hr class="custom-line">
     <div class="footer-logo-container ">
         <img src="../assets/images/Footer-logo.png" class="footer-logo">
-    </div>
+    </div> -->
     <!--Footer Site map -->
-    <div class="site-map-container ">
+    <!-- <div class="site-map-container ">
         <ul class="site-map-list">
             <li class="site-map-tab"><a href="#">الصفحة الرئيسية</a></li>
             <li class="site-map-tab"><a href="#">عن البوابة </a></li>
@@ -760,27 +763,27 @@
             <li class="site-map-tab"><a href="#">اضف مصنعك</a></li>
             <li class="site-map-tab"><a href="#">اتصل بنا </a></li>
         </ul>
-    </div>
+    </div> -->
     <!--Footer Contact info-->
-    <div class="contacts-container">
+    <!-- <div class="contacts-container">
         <ul class="contacts-list">
             <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-whatsapp"> </span>+</li>
             <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-fax"></span>+ </li>
             <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-phone-alt"></span>+</li>
             <li class="contact-link">info@madeinqatar.qa<span class="contact-icon icon-Icon-env"></span></li>
         </ul>
-    </div>
+    </div> -->
     <!--social-media icons-->
-    <div class="socialMedia-container">
+    <!-- <div class="socialMedia-container">
         <ul class="socialMedia-list">
             <li class="socialMedia-icon"><span class="icon-Icon-instagram"></span></li>
             <li class="socialMedia-icon"><span class="icon-Icon-facebook"></span></li>
             <li class="socialMedia-icon"><span class="icon-Icon-twitter"></span></li>
             <li class="socialMedia-icon"><span class="icon-Icon-youtube"></span></li>
         </ul>
-    </div>
+    </div> -->
     <!--copyRight-->
-    <div class="copy-rights-container">
+    <!-- <div class="copy-rights-container">
         <span class="copy-rihts-txt">© جميع الحقوق محفوظة 2019 </span>
     </div>
-</footer>
+</footer> -->
