--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -15,7 +15,10 @@
 //--------banner section-------------//
 .home-banner{
     position: relative;
-    height: 100%;
+    //height: 100%;
+    height: 47.5rem;
+    background-color: grey;
+
 }
 //----------About portal Section------//
 .about-portal{
