--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -25,7 +25,7 @@
     </aside>
 
 
-    <div class="industrial-sector-details" style="width: 50rem;position: relative;">
+    <div class="industrial-sector-details" >
         <div class="industrial-sector-header-container">
             <h3 class="industrial-sector__header-txt">القطاعات الصناعية</h3>
         </div>
