--- a/src/app/slides-carousel/slides-carousel.component.html
+++ b/src/app/slides-carousel/slides-carousel.component.html
@@ -29,7 +29,7 @@
 
         <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-            <img src="../../assets/images/c3.png" alt="Random third slide" class="big-carousel-image">
+            <img src="../../assets/images/c3.jpg" alt="Random third slide" class="big-carousel-image">
         </div>
         <div class="carousel-caption centered-caption">
             <h3 class="caption-header">ابنى مصنعك مع فريق كبير</h3>
