home page responsive done

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -59,12 +59,12 @@
    </div>
    <div class="container">
     <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6 col-md-12 col-sm-12">
             <div class="about-portal-image-container ">
                 <img class="about-portal-image" src="../assets/images/view-of-factory.png">
             </div>
         </div>
-        <div class="col-6 info-section">
+        <div class="col-lg-6 col-md-12 col-sm-12 info-section">
             <div class="section-sub-header-container">
                 <h4 class="sub-header-txt sub-header-txt--black mb-0">دليل قطر الصناعى</h4>
             </div>
@@ -113,9 +113,9 @@
             <li class="site-map-tab"><a href="#">اضف مصنعك</a></li>
             <li class="site-map-tab"><a href="#">اتصل بنا </a></li>
         </ul>
-    </div>
+    </div> 
     <!--Footer Contact info-->
-    <div class="contacts-container">
+     <div class="contacts-container">
         <ul class="contacts-list">
             <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-whatsapp"> </span>+</li>
             <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-fax"></span>+ </li>
@@ -124,7 +124,7 @@
         </ul>
     </div>
     <!--social-media icons-->
-    <div class="socialMedia-container">
+     <div class="socialMedia-container">
         <ul class="socialMedia-list">
             <li class="socialMedia-icon"><span class="icon-Icon-instagram"></span></li>
             <li class="socialMedia-icon"><span class="icon-Icon-facebook"></span></li>
@@ -133,7 +133,7 @@
         </ul>
     </div>
     <!--copyRight-->
-    <div class="copy-rights-container">
+     <div class="copy-rights-container">
         <span class="copy-rihts-txt">© جميع الحقوق محفوظة 2019 </span>
     </div>
-</footer>
+</footer> 
