about page is done responsive

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-6 uae-info-section">
+            <div class="col-lg-6 col-md-12 col-sm-12 uae-info-section">
              
                <div class="uae-info-paragraph-container">
                    <p class="uae-info-paragraph-txt">
@@ -35,7 +35,7 @@
                    </p>
                </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="uae-info-paragraph-img-container">
                     <img src="../assets/images/about-bg.png" class="uae-info-paragraph-img"alt="site-guide-background">
                 </div>
